<resources>
    <string name="app_name">IOB Quiz</string>
    <string name="textView_questions">Android is owned by google.</string>
    <string name="correct_button">True</string>
    <string name="wrong_button">False</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="instructions">Unscramble the word using all the letters.</string>
    <string name="score">Score: %d</string>
    <string name="previous">previous</string>
</resources>