<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_questions"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/True"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.517" />

        <Button
            android:id="@+id/True"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding"
            android:text="@string/true_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/False"
            app:layout_constraintEnd_toStartOf="@+id/False"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/False"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textView_button"
            android:text="@string/false_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/True"
            app:layout_constraintTop_toBottomOf="@+id/textView_question" />

        <Button
            android:id="@+id/previous"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding"
            android:text="@string/previous"
            app:layout_constraintBaseline_toBaselineOf="@+id/next"
            app:layout_constraintEnd_toStartOf="@+id/next"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/True"
            app:layout_constraintTop_toBottomOf="@+id/False" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>